--- a/.travis.yml
+++ b/.travis.yml
@@ -106,7 +106,7 @@ before_deploy:
 - cd hyrax-snapshot 
 - docker build --build-arg RELEASE_DATE=`date +%s` -t "opendap/olfs:snapshot" olfs
 - docker image ls -a
-- echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin hub.docker.com
+- echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin hub.docker.com
 - docker push ndpndp/olfs:snapshot
 - echo "- -- -- -- -- -- END before_deploy -- -- -- -- -- -"    
         
