--- a/.travis.yml
+++ b/.travis.yml
@@ -64,6 +64,8 @@ stages:
   if:  branch = master
 - name: scan
   if:  branch = master AND NOT type = pull_request
+- name: dockertime
+  if:  branch = master AND NOT type = pull_request
 
 jobs:
   include:
@@ -87,6 +89,25 @@ jobs:
       script:
         - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build 
         - ant sonar -Dsonar.login=$SONAR_LOGIN
+
+    - stage: dockertime
+      addons: 
+        sonarcloud:
+      # jdk 7 does not work with sonar scan. jhrg 3/14/19
+      jdk: openjdk8
+      script:
+        - export snap_tag="snapshot-"`date +%s`;
+        - ant -DHYRAX_VERSION=${snap_tag} -DOLFS_VERSION=${snap_tag} -DOLFS_DIST_BASE=olfs-snapshot DISTRO
+        - git clone https://github.com/opendap/hyrax-docker 
+        - ls -l hyrax-docker
+        - cd hyrax-docker; 
+        - git checkout snapshot;
+        - ls -l
+        - cd hyrax-snapshot 
+        - docker build --build-arg RELEASE_DATE=`date +%s` -t "opendap/olfs:snapshot" olfs
+        - docker image ls -a
+        - echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin 
+        - docker push opendap/olfs:snapshot
 
 before_deploy:
 - echo "- -- -- -- -- -- BEGIN before_deploy -- -- -- -- -- -"    
