--- a/.travis.yml
+++ b/.travis.yml
@@ -69,27 +69,27 @@ stages:
 
 jobs:
   include:
-    - stage: build
-      jdk: openjdk7
-      script: ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
-    - jdk: openjdk8
-      script: ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
-
-    - stage: test
-      jdk: openjdk7
-      script: ant check
-    - jdk: openjdk8
-      script: ant check
-    
-    - stage: scan
-      addons: 
-        sonarcloud:
-      # jdk 7 does not work with sonar scan. jhrg 3/14/19
-      jdk: openjdk8
-      script:
-        - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build 
-        - ant sonar -Dsonar.login=$SONAR_LOGIN
-
+#    - stage: build
+#      jdk: openjdk7
+#      script: ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+#    - jdk: openjdk8
+#      script: ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+#
+#    - stage: test
+#      jdk: openjdk7
+#      script: ant check
+#    - jdk: openjdk8
+#      script: ant check
+#    
+#    - stage: scan
+#      addons: 
+#        sonarcloud:
+#      # jdk 7 does not work with sonar scan. jhrg 3/14/19
+#      jdk: openjdk8
+#      script:
+#        - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build 
+#        - ant sonar -Dsonar.login=$SONAR_LOGIN
+#
     - stage: dockertime
       jdk: openjdk8
       script:
