--- a/.travis.yml
+++ b/.travis.yml
@@ -64,72 +64,44 @@ stages:
   if:  branch = master
 - name: scan
   if:  branch = master AND NOT type = pull_request
-- name: dockertime
-  if:  branch = master AND NOT type = pull_request
 
 jobs:
   include:
-#    - stage: build
-#      jdk: openjdk7
-#      script: ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
-#    - jdk: openjdk8
-#      script: ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
-#
-#    - stage: test
-#      jdk: openjdk7
-#      script: ant check
-#    - jdk: openjdk8
-#      script: ant check
-#    
-#    - stage: scan
-#      addons: 
-#        sonarcloud:
-#      # jdk 7 does not work with sonar scan. jhrg 3/14/19
-#      jdk: openjdk8
-#      script:
-#        - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build 
-#        - ant sonar -Dsonar.login=$SONAR_LOGIN
-#
-    - stage: dockertime
+    - stage: build
+      jdk: openjdk7
+      script: ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+    - jdk: openjdk8
+      script: ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
+
+    - stage: test
+      jdk: openjdk7
+      script: ant check
+    - jdk: openjdk8
+      script: ant check
+    
+    - stage: scan
+      addons: 
+        sonarcloud:
+      # jdk 7 does not work with sonar scan. jhrg 3/14/19
       jdk: openjdk8
       script:
-        - export snap_tag="snapshot-"`date +%s`
-        - pwd
-        - ant -DHYRAX_VERSION=${snap_tag} -DOLFS_VERSION=${snap_tag} -DOLFS_DIST_BASE=olfs-snapshot DISTRO
-        - git clone https://github.com/opendap/hyrax-docker 
-        - ls -l hyrax-docker
-        - cd hyrax-docker; 
-        - git checkout snapshot;
-        - ls -l
-        - cd hyrax-snapshot 
-        - docker build --build-arg RELEASE_DATE=`date +%s` -t "opendap/olfs:snapshot" olfs
-        - docker image ls -a
-        - echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin 
-        - docker push opendap/olfs:snapshot
+        - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build 
+        - ant sonar -Dsonar.login=$SONAR_LOGIN
+
 
 before_deploy:
-- echo "- -- -- -- -- -- BEGIN before_deploy -- -- -- -- -- -"    
-- pip install --user awscli
-- test -d $TRAVIS_BUILD_DIR/package || mkdir $TRAVIS_BUILD_DIR/package
-# Snapshot "version" number used for the OLFS and Hyrx versions
-- export snap_tag="snapshot-"`date +%s`;
-- ant -DHYRAX_VERSION=${snap_tag} -DOLFS_VERSION=${snap_tag} -DOLFS_DIST_BASE=olfs-snapshot DISTRO
-- pwd; 
-- ls -l build/dist
-- cp ./build/dist/*.tgz $TRAVIS_BUILD_DIR/package/;    
-- echo "Checking ${TRAVIS_BUILD_DIR}/package/"     
-- ls -l ${TRAVIS_BUILD_DIR}/package/
-- git clone https://github.com/opendap/hyrax-docker 
-- ls -l hyrax-docker
-- cd hyrax-docker; 
-- git checkout snapshot;
-- ls -l
-- cd hyrax-snapshot 
-- docker build --build-arg RELEASE_DATE=`date +%s` -t "opendap/olfs:snapshot" olfs
-- docker image ls -a
-- echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin 
-- docker push opendap/olfs:snapshot
-- echo "- -- -- -- -- -- END before_deploy -- -- -- -- -- -"    
+    - echo "- -- -- -- -- -- BEGIN before_deploy -- -- -- -- -- -"    
+    - pip install --user awscli
+    - test -d $TRAVIS_BUILD_DIR/package || mkdir $TRAVIS_BUILD_DIR/package
+    # Snapshot "version" number used for the OLFS and Hyrx versions
+    - export snap_tag="snapshot-"`date +%s`;
+    - ant -DHYRAX_VERSION=${snap_tag} -DOLFS_VERSION=${snap_tag} -DOLFS_DIST_BASE=olfs-snapshot DISTRO
+    - pwd; 
+    - ls -l build/dist
+    - cp ./build/dist/*.tgz $TRAVIS_BUILD_DIR/package/;    
+    - echo "Checking ${TRAVIS_BUILD_DIR}/package/"     
+    - ls -l ${TRAVIS_BUILD_DIR}/package/
+    - echo "- -- -- -- -- -- END before_deploy -- -- -- -- -- -"    
         
 deploy:
   provider: s3
@@ -141,3 +113,16 @@ deploy:
   on:
     branch: master
 
+after_deploy:
+    - echo "- -- -- -- -- -- BEGIN after_deploy -- -- -- -- -- -"    
+    - git clone https://github.com/opendap/hyrax-docker 
+    - ls -l hyrax-docker
+    - cd hyrax-docker; 
+    - git checkout snapshot;
+    - ls -l
+    - cd hyrax-snapshot 
+    - docker build --build-arg RELEASE_DATE=`date +%s` -t "opendap/olfs:snapshot" olfs
+    - docker image ls -a
+    - echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin 
+    - docker push opendap/olfs:snapshot
+    - echo "- -- -- -- -- -- END after_deploy -- -- -- -- -- -"    
