--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,9 @@ addons:
     build_command_prepend: "ant clean"
     build_command:   "ant server -DHYRAX_VERSION=Coverity_Build -DOLFS_VERSION=Coverity_Build"
     branch_pattern: coverity_scan
+  apt:
+    packages:
+      - awscli
 
 env:
   global:
@@ -54,8 +57,6 @@ env:
     - secure: "I31cY6mPuQVYQZSXnXzJfsG7I3Ed/LU7YMCoJJNcYy07A+v7xwTWTozDqqWn3jW5GSznRnRXJAs8OJETLnjQqPp2U7eN/KCJ4cMg+uTm50VJqop/BazozEvGYH8mTzHuexhLhqAMV/VJ1xXPtROqT24yNCoeCsg1txixzfFfIPY="
     # DOCKER_PASSWORD for our DockerHub account
     - secure: "e85309WOWZiwolrOgKg0C/N57YZ3nTQ8VxaFsRFIN6DhhOjcCAsRd2yyYbTqnl15UXbQAchX785ZnKZXRsmUdkOG6XPC7UAFM8At8y1FF96WnqhX4MdbxmyOFNWzeZB2gs7+/eKlWgy3Uu0DxqNDIxKthFrXHfMLWgslov91zq0="
-    #BOO
-    - secure: "RRqld4/dWZVhAF1esurfijeMytefe165Nio0q3SKLxXAA63gub3nYDY9V22UuZgGt+wy+gqRejknvmhnL7hSSTPKd9bW541+Lq7DZDioYxPOG4tF/aBx7L+CaJW75wglt4EgXWww2H7cuGGhJNsivTemaA/MbxAHUvE8nleyk90="
     
 stages:
 - name: build
@@ -64,22 +65,27 @@ stages:
   if:  branch = master
 - name: scan
   if:  branch = master AND NOT type = pull_request
+- name: snapshot
+  if:  branch = master
 
 jobs:
   include:
     - stage: build
+      script: export STAGE=build
       jdk: openjdk7
       script: ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
     - jdk: openjdk8
       script: ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build
 
     - stage: test
+      script: export STAGE=test
       jdk: openjdk7
       script: ant check
-    - jdk: openjdk8
+      jdk: openjdk8
       script: ant check
     
     - stage: scan
+      script: export STAGE=scan
       addons: 
         sonarcloud:
       # jdk 7 does not work with sonar scan. jhrg 3/14/19
@@ -87,18 +93,19 @@ jobs:
       script:
         - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build 
         - ant sonar -Dsonar.login=$SONAR_LOGIN
-
-            
-before_deploy:
-    - echo "- -- -- -- -- -- BEGIN before_deploy -- -- -- -- -- -"    
-    - pip install --user awscli
-    - export snap_tag="snapshot-"`date +%s`;
-    - ant -DHYRAX_VERSION=${snap_tag} -DOLFS_VERSION=${snap_tag} -DOLFS_DIST_BASE=olfs-snapshot DISTRO
-     - test -d $TRAVIS_BUILD_DIR/package || mkdir $TRAVIS_BUILD_DIR/package
-    - cp ./build/dist/*.tgz $TRAVIS_BUILD_DIR/package/;    
-    - echo "Checking ${TRAVIS_BUILD_DIR}/package/"     
-    - ls -l ${TRAVIS_BUILD_DIR}/package/
-    - echo "- -- -- -- -- -- END before_deploy -- -- -- -- -- -"    
+    
+    - stage: snapshot
+      script: export STAGE=snapshot
+        scipt:
+            - echo "- -- -- -- -- -- snapshot -- BEGIN -- -- -- -- -- -"    
+            - export snap_tag="snapshot-"`date +%s`;
+            - ant -DHYRAX_VERSION=${snap_tag} -DOLFS_VERSION=${snap_tag} -DOLFS_DIST_BASE=olfs-snapshot DISTRO
+            - test -d $TRAVIS_BUILD_DIR/package || mkdir $TRAVIS_BUILD_DIR/package
+            - cp ./build/dist/*.tgz $TRAVIS_BUILD_DIR/package/;    
+            - echo "Checking ${TRAVIS_BUILD_DIR}/package/"     
+            - ls -l ${TRAVIS_BUILD_DIR}/package/
+            - echo "- -- -- -- -- -- snapshot -- END -- -- -- -- -- -"    
+    
 
 deploy:
     provider: s3
@@ -108,7 +115,9 @@ deploy:
     skip_cleanup: true
     local_dir: $TRAVIS_BUILD_DIR/package
     on:
-        branch: master
+      branch:
+        - master
+        condition: $STAGE =~ ^snapshot$
 
 
 
