--- a/.travis.yml
+++ b/.travis.yml
@@ -95,8 +95,8 @@ jobs:
         - ant sonar -Dsonar.login=$SONAR_LOGIN
     
     - stage: snapshot
-      script: export STAGE=snapshot
-        scipt:
+      script: 
+            - export STAGE=snapshot
             - echo "- -- -- -- -- -- snapshot -- BEGIN -- -- -- -- -- -"    
             - export snap_tag="snapshot-"`date +%s`;
             - ant -DHYRAX_VERSION=${snap_tag} -DOLFS_VERSION=${snap_tag} -DOLFS_DIST_BASE=olfs-snapshot DISTRO
