--- a/.travis.yml
+++ b/.travis.yml
@@ -99,7 +99,7 @@ jobs:
             - export STAGE=snapshot
             - echo "- -- -- -- -- -- snapshot -- BEGIN -- -- -- -- -- -"    
             - export snap_tag="snapshot-"`date +%s`;
-            - ant -DHYRAX_VERSION=${snap_tag} -DOLFS_VERSION=${snap_tag} -DOLFS_DIST_BASE=olfs-snapshot DISTRO
+            - ant -DHYRAX_VERSION=${snap_tag} -DOLFS_VERSION=${snap_tag} -DOLFS_DIST_BASE=olfs-snapshot DISTRO;
             - test -d $TRAVIS_BUILD_DIR/package || mkdir $TRAVIS_BUILD_DIR/package
             - cp ./build/dist/*.tgz $TRAVIS_BUILD_DIR/package/;    
             - echo "Checking ${TRAVIS_BUILD_DIR}/package/"     
