--- a/.travis.yml
+++ b/.travis.yml
@@ -72,10 +72,6 @@ jobs:
         - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build 
         - ant sonar -Dsonar.login=$SONAR_LOGIN
     
-    - stage: snapshot
-      script: 
-            - export STAGE=snapshot
-    
 
 deploy:
     provider: s3
@@ -87,7 +83,7 @@ deploy:
     on:
       branch: 
       - master
-        condition: $STAGE =~ ^snapshot$
+        condition: $STAGE =~ ^scan$
 
 
 
