--- a/.travis.yml
+++ b/.travis.yml
@@ -43,8 +43,6 @@ stages:
   if:  branch = master
 - name: scan
   if:  branch = master AND NOT type = pull_request
-- name: snapshot
-  if:  branch = master
 
 jobs:
   include:
@@ -72,6 +70,7 @@ jobs:
         - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build 
         - ant sonar -Dsonar.login=$SONAR_LOGIN
     
+    
 
 deploy:
     provider: s3
@@ -83,7 +82,7 @@ deploy:
     on:
       branch: 
       - master
-        condition: $STAGE =~ ^scan$
+        condition: $STAGE =~ ^snapshot$
 
 
 
