Trying to get travis to build

--- a/.travis.yml
+++ b/.travis.yml
@@ -80,6 +80,6 @@ deploy:
     local_dir: $TRAVIS_BUILD_DIR/package
     on:
         branch: master
-    
+        condition: $STAGE =~ ^scan$
     
     
