--- a/.travis.yml
+++ b/.travis.yml
@@ -61,7 +61,7 @@ jobs:
       script: ant check
     
     - stage: scan
-      script: export STAGE=scan
+      script: export STAGE=scan; echo "STAGE: $STAGE";
       addons: 
         sonarcloud:
       # jdk 7 does not work with sonar scan. jhrg 3/14/19
@@ -72,7 +72,6 @@ jobs:
     
 
 deploy:
-    script: echo "stage: $STAGE"
     provider: s3
     access_key_id: $AWS_ACCESS_KEY_ID
     secret_access_key: $AWS_SECRET_ACCESS_KEY
