Trying to get travis to build

--- a/.travis.yml
+++ b/.travis.yml
@@ -63,7 +63,7 @@ jobs:
     - stage: scan
       script: 
         - export STAGE=scan
-        - echo "STAGE: "$STAGE
+        - echo $STAGE
       addons: 
         sonarcloud:
       # jdk 7 does not work with sonar scan. jhrg 3/14/19
