--- a/.travis.yml
+++ b/.travis.yml
@@ -69,8 +69,20 @@ jobs:
         - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build 
         - ant sonar -Dsonar.login=$SONAR_LOGIN
         - export STAGE=scan
-        - echo $STAGE
-    
+        - echo "STAGE: ${STAGE}"
+
+    - stage: snappah
+      jdk: openjdk8
+      script:
+        - export STAGE=snappah
+        - echo "STAGE: ${STAGE}"
+        - export snap_tag="snapshot-"`date +%s`;
+        - ant -DHYRAX_VERSION=${snap_tag} -DOLFS_VERSION=${snap_tag} -DOLFS_DIST_BASE=olfs-snapshot DISTRO
+        - test -d $TRAVIS_BUILD_DIR/package || mkdir $TRAVIS_BUILD_DIR/package
+        - cp ./build/dist/*.tgz $TRAVIS_BUILD_DIR/package/;    
+        - echo "Checking ${TRAVIS_BUILD_DIR}/package/"     
+        - ls -l ${TRAVIS_BUILD_DIR}/package/
+
 
 deploy:
     provider: s3
@@ -81,6 +93,6 @@ deploy:
     local_dir: $TRAVIS_BUILD_DIR/package
     on:
         branch: master
-        condition: $STAGE =~ ^scan$
+        condition: $STAGE =~ ^snappah$
     
     
