--- a/.travis.yml
+++ b/.travis.yml
@@ -69,13 +69,15 @@ jobs:
         - ant server -DHYRAX_VERSION=CI-Build -DOLFS_VERSION=CI-Build 
         - ant sonar -Dsonar.login=$SONAR_LOGIN
         - export STAGE=scan
-        - echo "STAGE: ${STAGE}"
+        - echo -n "STAGE: "
+        - echo $STAGE
 
     - stage: snappah
       jdk: openjdk8
       script:
         - export STAGE=snappah
-        - echo "STAGE: ${STAGE}"
+        - echo -n "STAGE: "
+        - echo $STAGE
         - export snap_tag="snapshot-"`date +%s`;
         - ant -DHYRAX_VERSION=${snap_tag} -DOLFS_VERSION=${snap_tag} -DOLFS_DIST_BASE=olfs-snapshot DISTRO
         - test -d $TRAVIS_BUILD_DIR/package || mkdir $TRAVIS_BUILD_DIR/package
