--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,17 @@ env:
     - secure: "MB2g7wf6e2Dt5so1Ek6zoAP04L/8GjKxbOlHQKgTa+Luw30Oa7ndqrG9gc0FX/K3dr03WOjEnO6lZmL9ZMwK7Q2FadrzYO0Ym8ZkruOFMFZxrpRnUX30yQFz6zgY9zGe0PiCNdO7++wYXOaP5xGi6UVyMsfhfWtY3p5Aq9qyU8c="
     # AWS_SECRET_ACCESS_KEY
     - secure: "aLQeyAMzLydF6mK3Qpy0RewpD3VjzzFbQZhD0m/esLercK4tYHj3F4RlLNqCnKSBnrJcIvvFrEHad15B1XLNVTKCjbyobZEzMNGviiHkx7Vgqx6+BRJqg1uNFGOYmZJrnf4ZTCaqpvykXUs+CZGw3YC7VvWvUKiyzv5fmqE3A8I="
+    # GIT_UID
+    - secure: "jnuhhkxj0UlQLZSObVEi5xi0dAHObLy6S6f4hhCLKsI0nDgdL8Xj212ZubI4mlRSOgCmfbBNSSz20WgH11D7fuvPQQVyN6MMbh9OrE6JT1NEnA+Rzl+1tjWYTTBCkw1fQjchCg6fR+5Poyq4zfXOaG3H8DBZfrSGFTTdC2BdcWs="
+    # GIT_PSWD
+    - secure: "KDP1zPlruadQIbkvXHWHx6rLcTJ3P7AK2Io7IBnAiW3QETDxVksThXKY2Hey25fXw8+UV0nXuQ4v4gMNmghjvCU1k3N/vkIk9AUDC19z1IM282GumvJjZ+6WdHGvMn1sRPi3Jt3ymHoLAHiUnMbJcdc6xtAUlDCq7x2fb99sUFc="
+
+
+
+
+
+
+
     
 stages:
 - name: build
@@ -94,5 +105,17 @@ deploy:
     on:
         branch: master
         condition: $STAGE =~ ^snappah$
-    
+
+after_deploy:
+  script:
+    - echo "- -- -- -- -- -- BEGIN after_deploy -- -- -- -- -- -"    
+    - git clone https://github.com/opendap/hyrax-docker 
+    - cd hyrax-docker; 
+    - git checkout snapshot;
+    - cd hyrax-snapshot 
+    - date +%s > snapshot.time
+    - git commit -am "Triggering snapshot: "`cat snapshot.time`
+    - git push
+    - echo "- -- -- -- -- -- END after_deploy -- -- -- -- -- -"    
+
     
