--- a/.travis.yml
+++ b/.travis.yml
@@ -57,18 +57,6 @@ stages:
 
 jobs:
   include:
-    - stage: snappah
-      jdk: openjdk8
-      script:
-        - export STAGE=snappah
-        - echo $STAGE
-        - export snap_tag="snapshot-"`date +%s`;
-        - ant -DHYRAX_VERSION=${snap_tag} -DOLFS_VERSION=${snap_tag} -DOLFS_DIST_BASE=olfs-snapshot DISTRO
-        - test -d $TRAVIS_BUILD_DIR/package || mkdir $TRAVIS_BUILD_DIR/package
-        - cp ./build/dist/*.tgz $TRAVIS_BUILD_DIR/package/;    
-        - echo "Checking ${TRAVIS_BUILD_DIR}/package/"     
-        - ls -l ${TRAVIS_BUILD_DIR}/package/
-
     - stage: build
       script: export STAGE=build
       jdk: openjdk7
@@ -94,6 +82,18 @@ jobs:
         - export STAGE=scan
         - echo $STAGE
 
+    - stage: snappah
+      jdk: openjdk8
+      script:
+        - export STAGE=snappah
+        - echo $STAGE
+        - export snap_tag="snapshot-"`date +%s`;
+        - ant -DHYRAX_VERSION=${snap_tag} -DOLFS_VERSION=${snap_tag} -DOLFS_DIST_BASE=olfs-snapshot DISTRO
+        - test -d $TRAVIS_BUILD_DIR/package || mkdir $TRAVIS_BUILD_DIR/package
+        - cp ./build/dist/*.tgz $TRAVIS_BUILD_DIR/package/;    
+        - echo "Checking ${TRAVIS_BUILD_DIR}/package/"     
+        - ls -l ${TRAVIS_BUILD_DIR}/package/
+
 
 
 deploy:
@@ -114,6 +114,7 @@ after_deploy:
     - cd hyrax-snapshot;
     - date +%s > snapshot.time;
     - git commit -am "Triggering snapshot.";
+    - git status;
     - git push https://$GIT_UID:$GIT_PSWD@github.com/opendap/hyrax-docker.git --all 
 
 
