--- a/.travis.yml
+++ b/.travis.yml
@@ -34,9 +34,9 @@ env:
     # SONAR_LOGIN, made using "travis encrypt --org -r OPENDAP/olfs SONAR_LOGIN=335df..."
     - secure: "GW672d33rdWG40v8ve25p909qnejhqWGzoX7+IEflv9hMZ+8vDWArtFaxuILhu/QeJlLJgMCrNyWdhgpSuyEJS8/EQlOUXWZfZaSPBVriayd7OKLY5D35PKODFPXbZpJ1GOheMz3roQkg+IjQzgey/zOGu4KQB9FjtcqllFvy38="
     # AWS_ACCESS_KEY_ID for the user 'travis'
-    - secure: "MB2g7wf6e2Dt5so1Ek6zoAP04L/8GjKxbOlHQKgTa+Luw30Oa7ndqrG9gc0FX/K3dr03WOjEnO6lZmL9ZMwK7Q2FadrzYO0Ym8ZkruOFMFZxrpRnUX30yQFz6zgY9zGe0PiCNdO7++wYXOaP5xGi6UVyMsfhfWtY3p5Aq9qyU8c="
+    - secure: "E5lG+teE47tVf64ysBcOJyF2RDwfNnOwF0Xz2jah69Rs16D+B5tLnimnNsOAlgRHkp6Fx+dByYW1b2tx/uIgnjcONdoM8DcR19IBrLSnhTM+tF0ysiiMCcs7OZiNhEt20ySBZgUvnP0xvpdrjQB4gdFo8Ja4fv2GsmZVXty8C8c="
     # AWS_SECRET_ACCESS_KEY
-    - secure: "aLQeyAMzLydF6mK3Qpy0RewpD3VjzzFbQZhD0m/esLercK4tYHj3F4RlLNqCnKSBnrJcIvvFrEHad15B1XLNVTKCjbyobZEzMNGviiHkx7Vgqx6+BRJqg1uNFGOYmZJrnf4ZTCaqpvykXUs+CZGw3YC7VvWvUKiyzv5fmqE3A8I="
+    - secure: "jpk1PP5uXIsf5kirREnQ76Ry2RH3Y1AyLOUpzxjD7nCMqUK8upQjv7qefqRuDmsqzUnfUc2mOZixdLaFNw8ntM1mFM90/sHK3SuKoDoo6tv9BR6Lck95M09Q23MLOzqXlqDaOdXgBhQ5JMx5e36GZRxQ32IbU12MuUUS++dx4NU=""
     # GIT_UID for travis-ci-opendap
     - secure: "jnuhhkxj0UlQLZSObVEi5xi0dAHObLy6S6f4hhCLKsI0nDgdL8Xj212ZubI4mlRSOgCmfbBNSSz20WgH11D7fuvPQQVyN6MMbh9OrE6JT1NEnA+Rzl+1tjWYTTBCkw1fQjchCg6fR+5Poyq4zfXOaG3H8DBZfrSGFTTdC2BdcWs="
     # GIT_PSWD for travis-ci-opendap
