--- a/resources/hyrax/WEB-INF/web.xml
+++ b/resources/hyrax/WEB-INF/web.xml
@@ -149,7 +149,7 @@
     </filter-mapping>
 
     <!-- Uncomment These two filters to enable access control. -->
-    <!-- filter>
+    <filter>
         <filter-name>IdP</filter-name>
         <filter-class>opendap.auth.IdFilter</filter-class>
     </filter>
@@ -167,8 +167,6 @@
         <filter-name>PEP</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
-
-    -->
 
 
     <!--  - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
