--- a/.travis.yml
+++ b/.travis.yml
@@ -47,13 +47,16 @@ env:
 
 stages:
 - name: build
-  if:  branch = moo
+    if:  branch = master
 - name: test
-  if:  branch = moo
+    if:  branch = master
 - name: scan
-  if:  branch = master OR session_serialization AND NOT type = pull_request
-- name: snappah
-  if:  branch = moo AND NOT type = pull_request
+    if:  branch = master OR session_serialization
+- name: package
+    if:  branch = master OR branch = travis
+
+
+
 
 jobs:
   include:
