--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ stages:
 - name: test
     if:  branch = master
 - name: scan
-    if:  branch = master OR session_serialization
+    if:  branch = master OR branch = session_serialization
 - name: package
     if:  branch = master OR branch = travis
 
