--- a/.travis.yml
+++ b/.travis.yml
@@ -51,7 +51,7 @@ stages:
 - name: test
   if:  branch = master
 - name: scan
-  if:  branch = master AND NOT type = pull_request
+  if:  branch = master 
 - name: snappah
   if:  branch = master AND NOT type = pull_request
 
