--- a/.travis.yml
+++ b/.travis.yml
@@ -47,11 +47,11 @@ env:
 
 stages:
 - name: build
-  if:  branch = master
+  if:  branch = foo
 - name: test
-  if:  branch = master
+  if:  branch = foo
 - name: scan
-  if:  branch = master 
+  if:  branch = master
 - name: snappah
   if:  branch = master AND NOT type = pull_request
 
