--- a/.travis.yml
+++ b/.travis.yml
@@ -94,6 +94,18 @@ jobs:
         - echo "Checking ${TRAVIS_BUILD_DIR}/package/"     
         - ls -l ${TRAVIS_BUILD_DIR}/package/
         
+    - stage: snappah
+      jdk: openjdk8
+      script:
+        - export STAGE=snappah
+        - echo $STAGE
+        - export snap_tag="snapshot-"`date +%s`;
+        - ant -DHYRAX_VERSION=${snap_tag} -DOLFS_VERSION=${snap_tag} -DOLFS_DIST_BASE=olfs-snapshot ngap-dist
+        - test -d $TRAVIS_BUILD_DIR/package || mkdir $TRAVIS_BUILD_DIR/package
+        - cp ./build/dist/*.tgz $TRAVIS_BUILD_DIR/package/;
+        - echo "Checking ${TRAVIS_BUILD_DIR}/package/"
+        - ls -l ${TRAVIS_BUILD_DIR}/package/
+
 
 # before_deploy:
 #
