--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,7 @@ stages:
 - name: scan
   if:  branch = master AND NOT type = pull_request
 - name: snappah
-  if:  branch = master AND NOT type = pull_request
+  if:  branch = master 
 
 jobs:
   include:
