--- a/.travis.yml
+++ b/.travis.yml
@@ -55,6 +55,8 @@ stages:
 - name: snappah
   if:  branch = master OR branch = ngap-production
 
+  #AND NOT type = pull_request
+
 jobs:
   include:
     - stage: build
@@ -128,19 +130,8 @@ deploy:
     skip_cleanup: true
     local_dir: $TRAVIS_BUILD_DIR/package
     on:
-      branch: master
       condition: $STAGE =~ ^snappah$
 
-deploy:
-  - provider: s3
-    access_key_id: $AWS_ACCESS_KEY_ID
-    secret_access_key: $AWS_SECRET_ACCESS_KEY
-    bucket: opendap.travis.build
-    skip_cleanup: true
-    local_dir: $TRAVIS_BUILD_DIR/package
-    on:
-      branch: ngap-production
-      condition: $STAGE =~ ^snappah$
 
   # Push snapshot files to w.o.o
   # - provider: script
