Adding logback-ngap.xml file to ngap package

--- a/build.xml
+++ b/build.xml
@@ -902,6 +902,7 @@
             -->
             <zipfileset dir="${ngapResources.dir}" prefix="WEB-INF">
                 <include name="urlrewrite.xml"/>
+                <include name="logback-ngap.xml"/>
             </zipfileset>
 
             <zipfileset dir="${ngapResources.dir}" prefix="WEB-INF/conf">
