--- a/build.xml
+++ b/build.xml
@@ -907,7 +907,10 @@
         <echo level="info" message="ngapResources.dir:     ${ngapResources.dir}"/>
         <echo level="info" message="build.dist:            ${build.dist}"/>
 
-        <copy file="${ngapResources.dir}/logback-ngap.xml" tofile="${build.dist}/logback-test.xml"/>
+        <!-- Drop this bit, and the bits below that include it in the war and
+             delete it from the dist dir -->
+        <!-- copy file="${ngapResources.dir}/logback-ngap.xml" tofile="${build.dist}/logback-test.xml"/ -->
+
         <!--
         Here we:
          - Set the WAR file name to ${NGAP_DEPLOYMENT_CONTEXT}.war (A value of
@@ -929,31 +932,20 @@
                 <exclude name="WEB-INF/urlrewrite.xml"/>
             </zipfileset>
 
-            <!--
-            Special urlrewrite.xml that shunts requests to the ngap
-            service endpoint if they are not explicitly for the hyrax, wcs
-            or some other service endpoint.
-            -->
             <zipfileset dir="${ngapResources.dir}" prefix="WEB-INF">
                 <include name="urlrewrite.xml"/>
                 <include name="logback-ngap.xml"/>
-            </zipfileset>
-
-            <zipfileset dir="${build.dist}" prefix="WEB-INF">
-                <include name="logback-test.xml"/>
             </zipfileset>
 
             <zipfileset dir="${ngapResources.dir}" prefix="WEB-INF/conf">
                 <include name="olfs.xml"/>
             </zipfileset>
 
-
             <zipfileset dir="${doc.dir}" prefix="docs">
                 <exclude name="src.distribution.readme"/>
             </zipfileset>
         </war>
         <delete file="${build.dist}/index.html"/>
-        <delete file="${build.dist}/logback-test.xml"/>
     </target>
 
     <!-- == == == == == == == == == == == == == == == == == == == == == == -->
