More ngap configuration adjustments.

--- a/build.xml
+++ b/build.xml
@@ -928,6 +928,7 @@
             <zipfileset dir="${build.hyrax.resources}" prefix="">
                 <include name="**/*"/>
                 <exclude name="WEB-INF/conf/olfs.xml"/>
+                <exclude name="WEB-INF/conf/logback.xml"/>
                 <exclude name="WEB-INF/web.xml"/>
                 <exclude name="WEB-INF/urlrewrite.xml"/>
             </zipfileset>
